[gd_scene format=3 uid="uid://cis0cjlqep4l8"]

[ext_resource type="Script" uid="uid://cqmyonnhht2xv" path="res://scripts/exploration/PlayerController.gd" id="1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_player"]
size = Vector3(0.8, 1.6, 0.8)

[sub_resource type="SphereShape3D" id="SphereShape3D_interaction"]
radius = 2.0

[node name="Player" type="CharacterBody3D" unique_id=1200457524]
collision_layer = 2
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=926812947]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("BoxShape3D_player")

[node name="Sprite3D" type="Sprite3D" parent="." unique_id=1977400890]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
pixel_size = 0.03
billboard = 1
texture_filter = 0

[node name="InteractionArea" type="Area3D" parent="." unique_id=290581381]
collision_layer = 0
collision_mask = 12

[node name="InteractionShape" type="CollisionShape3D" parent="InteractionArea" unique_id=666882491]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_interaction")

[connection signal="area_entered" from="InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_interaction_area_area_exited"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
